@@ -337,6 +337,10 @@ verilog/parser_bugs.v:383: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:385: MODULE  'module' 'bug192' undef '0'
 verilog/parser_bugs.v:391: VAR  'var' 'cover_ts' 'module' '' '' '' 'new()'
 verilog/parser_bugs.v:392: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:394: FUNCTION  'function' 'func_implied_in' 'bit'
+verilog/parser_bugs.v:394: VAR  'port' 'i' 'function' '' 'bit' '' ''
+verilog/parser_bugs.v:394: PORT  'i' 'function' 'input' 'bit' '' '1'
+verilog/parser_bugs.v:394: ENDTASKFUNC  'endfunction'
 verilog/pinorder.v:006: MODULE  'module' 'pinorder4' undef '0'
 verilog/pinorder.v:007: VAR  'net' 'b_i' 'module' 'wire' '' '' ''
 verilog/pinorder.v:008: VAR  'net' 'd_o' 'module' 'wire' '' '' ''
@@ -460,7 +464,8 @@ verilog/parser_sv.v:075: PACKAGE  'package' 'imp_test_pkg'
 verilog/parser_sv.v:076: VAR  'typedef' 'byte_t' 'package' '' 'logic [7:0]' '' ''
 verilog/parser_sv.v:077: VAR  'typedef' 'word_t' 'package' '' 'logic [15:0]' '' ''
 verilog/parser_sv.v:078: FUNCTION  'function' 'afunc' ''
-verilog/parser_sv.v:078: PORT  'w' 'function' '' 'integer' '' '1'
+verilog/parser_sv.v:078: VAR  'port' 'w' 'function' '' 'integer' '' ''
+verilog/parser_sv.v:078: PORT  'w' 'function' 'input' 'integer' '' '1'
 verilog/parser_sv.v:078: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:079: ENDPACKAGE  'endpackage'
 verilog/parser_sv.v:080: MODULE  'module' 'imp_test_mod' undef '0'
@@ -509,7 +514,8 @@ verilog/parser_sv.v:132: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:134: FUNCTION  'function' 'new' ''
 verilog/parser_sv.v:135: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:138: FUNCTION  'function' 'FwdClass::ffunc' 'bit [3:0]'
-verilog/parser_sv.v:138: PORT  'in' 'function' '' 'bit [3:0]' '' '1'
+verilog/parser_sv.v:138: VAR  'port' 'in' 'function' '' 'bit [3:0]' '' ''
+verilog/parser_sv.v:138: PORT  'in' 'function' 'input' 'bit [3:0]' '' '1'
 verilog/parser_sv.v:140: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:142: FUNCTION  'function' 'VclassWCopy::copy' 'VclassWCopy'
 verilog/parser_sv.v:143: VAR  'port' 'to' 'function' '' 'VclassWCopy' '' ''
@@ -553,17 +559,20 @@ verilog/parser_sv.v:224: FUNCTION  'function' 'foo4' 'bit'
 verilog/parser_sv.v:225: VAR  'var' 'foo5' 'class' '' 'static local bit' '[string]' ''
 verilog/parser_sv.v:229: VAR  'typedef' 'restart_e' 'class' '' 'int' '' ''
 verilog/parser_sv.v:230: FUNCTION  'function' 'do_all' 'void'
-verilog/parser_sv.v:230: PORT  'kind' 'function' '' 'vmm_cl_func_colon::restart_e' '' '1'
+verilog/parser_sv.v:230: VAR  'port' 'kind' 'function' '' 'vmm_cl_func_colon::restart_e' '' 'vmm_cl_func_colon::FIRM'
+verilog/parser_sv.v:230: PORT  'kind' 'function' 'input' 'vmm_cl_func_colon::restart_e' '' '1'
 verilog/parser_sv.v:231: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:232: FUNCTION  'function' 'uses_class_type' 'int'
 verilog/parser_sv.v:236: TASK  'task' 'do_reset'
-verilog/parser_sv.v:236: PORT  'kind' 'task' '' 'vmm_cl_func_colon::restart_e' '' '1'
+verilog/parser_sv.v:236: VAR  'port' 'kind' 'task' '' 'vmm_cl_func_colon::restart_e' '' 'vmm_cl_func_colon::FIRM'
+verilog/parser_sv.v:236: PORT  'kind' 'task' 'input' 'vmm_cl_func_colon::restart_e' '' '1'
 verilog/parser_sv.v:239: TASK  'task' 'empty_comma'
 verilog/parser_sv.v:244: ENDTASKFUNC  'endtask'
 verilog/parser_sv.v:246: TASK  'task' 'vmm_more'
 verilog/parser_sv.v:252: ENDTASKFUNC  'endtask'
 verilog/parser_sv.v:255: FUNCTION  'function' 'vmm_cl_func_colon::uses_class_type' 'int'
-verilog/parser_sv.v:255: PORT  'note_uses_class_type' 'function' '' 'restart_e' '' '1'
+verilog/parser_sv.v:255: VAR  'port' 'note_uses_class_type' 'function' '' 'restart_e' '' ''
+verilog/parser_sv.v:255: PORT  'note_uses_class_type' 'function' 'input' 'restart_e' '' '1'
 verilog/parser_sv.v:256: VAR  'var' 'also_uses_class_type' 'function' '' 'restart_e' '' ''
 verilog/parser_sv.v:257: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:259: MODULE  'module' 'hidden_checks' undef '0'
